--- a/index.html
+++ b/index.html
@@ -2,24 +2,135 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style>
+      body{
+          background: LightGray;
+          font-family: helvetica,arial, sans-serif;
+          color: #990033;
+          margin:0;
+      }
+      body{
+        border: black 3px solid;
+      }
+
+      h4{
+        border: black 3px solid;
+       }
+
+      li{
+        border: black 2px solid;
+
+       }
+      p{
+        border: black 4px solid;
+       }
+      img{
+        border: black 5px solid;
+       }
+
+      img{
+        width:100%;
+      }
+        h3{
+            text-align:center;
+            color: darkblue;
+            border:black 2px solid;
+
+        }
+        h1{
+        text-align:center;
+      }
+        h4{
+          text-align:center;
+          border: #990033 5px solid;
+
+        }
+        h2{
+          text-align: center;
+          border: #990033 3px solid;
+        }
+
+      a{
+          border: black 2px solid;
+          text-decoration: none;
+      }
+
+      #one{
+        font-size:2em;
+        color:darkblue;
+      }
+
+      .center{
+        /* margin:auto; */
+        /* width:100% px; */
+        /* display: block; */
+       }
+
+       ol{
+         border:black 2px solid;
+         padding:1%;
+         margin: 1%;
+
+       }
+    </style>
+
     <title>Gospel Music</title>
   </head>
   <body>
-    <h1>Gospel of the Ages</h1>
+    <h1 id="top">Gospel of the Ages</h1>
       <h2>The Best of Traditional Gospel Music</h2>
       <h4>Songs of Dr. Thomas Andrew Dorsey</h4>
       <ol>
-        <li>Precious Lord</li>
-        <li>Walk Around Heaven</li>
-        <li>High Way to Heaven</li>
-        <li>Peace in the Valley</li>
-        <li>Jesus is the Light</li>
-        <li>If You See My Savior</li>
-        <li>How Many Times</li>
-        <li>I'll Tell It Wherever I Go</li>
-        <li>I'll Never Turn Back</li>
-        <li>God Be With You</li>
+        <li><a href="#precious-lord">Precious Lord</a></li>
+        <li><a href="#walk_around_heaven">Walk Around Heaven</a></li>
+        <li><a href="#high_way_to_heaven">High Way to Heaven</a></li>
+        <li><a href="#peace_in_the_valley">Peace in the Valley</a></li>
+        <li><a href="#jesus_is_the_light">Jesus is the Light</a></li>
+        <li><a href="#if_you_see_my_savior">If You See My Savior</a></li>
+        <li><a href="#how_many_times">How Many Times</a></li>
+        <li><a href="#i'll_tell_it_wherever_i_go">I'll Tell It Wherever I Go</a></li>
+        <li><a href="#i'll_never_turn_back">I'll Never Turn Back</a></li>
+        <li><a href="#god_be_with_you">God Be With You</a></li>
       </ol>
+
+      <h3 id="precious-lord">Precious Lord</h3>
+
+        <img src="Images/precious_lord_music.jpg" alt="Precious Lord Cover" />
+        <!--https://interactive.wttw.com/dusable-to-obama/dorseys-gospel-->
+        <p>This is by far the most popular song written by the "Father of
+        Gospel Music", Dr. Thomas Dorsey.  It was written following the death of his wife
+        and child. Thomas Dorsey was born in Georgia and was the pianist
+        for many jazz singers including Ma Rainey.</p>
+
+      <h3 id="walk">Walk Around Heaven</h3>
+        <p>Walking around heaven was and is the dream of many African American
+        Christians.  With life as it was then and is now, many dreamed of
+        a day when you could just "Walk Around Heaven."</p>
+
+      <h3 id="high_way">High Way to Heaven</h3>
+      <img src="Images/high_way_to_heaven.png" alt="Sheet Music Cover" />
+      <!--https://interactive.wttw.com/dusable-to-obama/dorseys-gospel-->
+        <p>"High Way to Heaven" is a song that is often misunderstood.
+          Some have renamed it as "It's a 'highway' to heaven"
+        meaning something with two, four or six lanes.
+        But the real meaning is more associated with,
+        it's a 'high' way. Meaning that we have to live above sin, debauchery and evilness.
+        We have to take the 'high' way not the 'low'way.</p>
+
+      <h3 id="peace">Peace in the Valley</h3>
+      <h3 id="jesus">Jesus is the Light</h3>
+      <h3 id="see">If You See My Savior</h3>
+      <h3 id="how">How Many Times</h3>
+      <h3 id="tell">I'll Tell It Wherever I Go</h3>
+      <h3 id="never">I'll Never Turn Back</h3>
+      <h3 id="god">God Be With You</h3>
+
+
+
+<p><a href="#top">Top</a></p>
+
+
+
 
 
   </body>
