--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
   <head>
     <meta charset="utf-8">
     <style>
-      body{
-          background: LightGray;
-          font-family: helvetica,arial, sans-serif;
-          color: #990033;
-          margin:0;
+    body{
+      background: LightGray;
+      font-family: helvetica,arial, sans-serif;
+      color: #990033;
+      margin:0;
+    }
+        .cover {
+        background: url("l71Xxpn8sUJL._SL1500_.jpg");
+        height: 400px;
+        background-position:center;
+        background-color:LightGray;
+        background-repeat:no-repeat;
+        background-size:contain;
+        }
+
+
+      h1
+      { border: black 4px solid;
+        text-align:center;
       }
-      body{
-        border: black 3px solid;
-      }
-
-      h4{
-        border: black 3px solid;
-       }
-
-      li{
-        border: black 2px solid;
-
-       }
       p{
         border: black 4px solid;
-       }
-      img{
-        border: black 5px solid;
        }
 
       img{
@@ -42,16 +41,13 @@
       }
         h4{
           text-align:center;
-          border: #990033 5px solid;
 
         }
         h2{
           text-align: center;
-          border: #990033 3px solid;
         }
 
       a{
-          border: black 2px solid;
           text-decoration: none;
       }
 
@@ -60,6 +56,7 @@
         color:darkblue;
       }
 
+
       .center{
         /* margin:auto; */
         /* width:100% px; */
@@ -67,9 +64,6 @@
        }
 
        ol{
-         border:black 2px solid;
-         padding:1%;
-         margin: 1%;
 
        }
     </style>
@@ -77,6 +71,9 @@
     <title>Gospel Music</title>
   </head>
   <body>
+    <div class="cover">
+      <h1>Dr. Thomas Dorsey</h1>
+    </div>
     <h1 id="top">Gospel of the Ages</h1>
       <h2>The Best of Traditional Gospel Music</h2>
       <h4>Songs of Dr. Thomas Andrew Dorsey</h4>
