--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<link href="styles.css" rel-"stylesheet" typetype/css">
+<link href="styles.css" rel="stylesheet" type="type/css">
     <title>Gospel Music</title>
   </head>
   <body>
